force-app/main/default/objects/saleswings__SalesWings_Field_Mapping__c/saleswings__SalesWings_Field_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting used to store Prospect to Lead and Prospect to Contact field mapping.</description>
    <label>SalesWings Field Mapping</label>
</CustomObject>