force-app/main/default/objects/saleswings__SalesWings_Field_Mapping__c/fields/saleswings__Source_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Source_Object_API_Name__c</fullName>
    <label>Source Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>