force-app/main/default/objects/saleswings__SalesWings_Field_Mapping__c/fields/saleswings__Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Target_Field_API_Name__c</fullName>
    <label>Target Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>