force-app/main/default/objects/saleswings__SalesWings_Field_Mapping__c/listViews/saleswings__All.listView-meta.xml
<ListView>
    <fullName>saleswings__All</fullName>
    <columns>NAME</columns>
    <columns>saleswings__Source_Object_API_Name__c</columns>
    <columns>saleswings__Source_Field_API_Name__c</columns>
    <columns>saleswings__Target_Object_API_Name__c</columns>
    <columns>saleswings__Target_Field_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>